--- a/web-app/.gitignore
+++ b/web-app/.gitignore
@@ -40,3 +40,11 @@ yarn-error.log*
 next-env.d.ts
 
 *storybook.log
+
+# Sentry Config File
+.env.sentry-build-plugin
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
