--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,37 +3,73 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "watch-build": "tsc --watch",
+    "watch-test": "vitest --watch",
+    "test": "vitest --run",
+    "test:report": "vitest --run --reporter=verbose,dot",
+    "coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui",
+    "watch": "concurrently --names 'TS,JEST' -c 'red,blue' \"npm run watch-build\" \"npm run watch-test\"",
+    "test:e2e": "playwright test",
+    "sentry:release": "sentry-cli releases new $npm_package_version && sentry-cli releases set-commits $npm_package_version --auto && sentry-cli releases finalize $npm_package_version"
+
   },
   "dependencies": {
+    "@sentry/nextjs": "^8.40.0",
+    "@stripe/stripe-js": "^5.2.0",
+    "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide": "^0.460.0",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "stripe": "^17.4.0",
+    "tailwind-merge": "^2.5.4",
+    "vercel": "^39.1.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@playwright/test": "^1.49.0",
+    "@storybook/addon-a11y": "^8.4.5",
     "@storybook/addon-essentials": "^8.4.5",
     "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-links": "^8.4.5",
     "@storybook/addon-onboarding": "^8.4.5",
+    "@storybook/addon-themes": "^8.4.5",
     "@storybook/blocks": "^8.4.5",
     "@storybook/nextjs": "^8.4.5",
     "@storybook/react": "^8.4.5",
     "@storybook/test": "^8.4.5",
+    "@storybook/test-runner": "^0.19.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/ui": "^2.1.5",
+    "axe-playwright": "^2.0.3",
+    "concurrently": "^9.1.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-storybook": "^0.11.1",
+    "jest-axe": "^9.0.0",
+    "jsdom": "^25.0.1",
     "postcss": "^8",
     "storybook": "^8.4.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5",
+    "vitest": "^2.1.5"
   }
 }
