Seting up Web app

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -2,7 +2,7 @@ name: Integration Test
 
 on:
   push:
-    branches: [main, devs]
+    branches: [ devs]
     paths:
       - 'web-app/**'
   pull_request:
