--- a/.github/workflows/playwright-test.yml
+++ b/.github/workflows/playwright-test.yml
@@ -2,11 +2,11 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [ dev]
     paths:
       - 'web-app/**'
   pull_request:
-    branches: [main, master]
+    branches: [ dev]
     paths:
       - 'web-app/**'
 
