--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -2,9 +2,9 @@ name: Sentry Release Production
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ dev ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ dev ]
     
 
 jobs:
@@ -13,6 +13,7 @@ jobs:
    
     outputs:
       new_tag: ${{ steps.taggerFinal.outputs.new_tag }}
+      if: false
     steps:
       - name: Checkout
         uses: actions/checkout@v4
