--- a/web-app/package.json
+++ b/web-app/package.json
@@ -18,7 +18,6 @@
     "watch": "concurrently --names 'TS,JEST' -c 'red,blue' \"npm run watch-build\" \"npm run watch-test\"",
     "test:e2e": "playwright test",
     "sentry:release": "sentry-cli releases new $npm_package_version && sentry-cli releases set-commits $npm_package_version --auto && sentry-cli releases finalize $npm_package_version"
-
   },
   "dependencies": {
     "@sentry/nextjs": "^8.40.0",
@@ -51,6 +50,7 @@
     "@storybook/test-runner": "^0.19.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
